# game_of_life

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  game.cpp  game.h  main.cpp  options.cpp  options.h  utility.cpp  utility.h
test/: CMakeLists.txt  test_grid.cpp  test_options.cpp
